# file_desc

./: CMakeLists.txt  README.md  conanfile.txt
cmake/: standard_settings.cmake  tools.cmake
include/fd/: fd.hpp  file_desc_concepts.hpp  file_descriptor.hpp
include/fd/async/: awaitable.hpp  file_descriptor.hpp  task.hpp
include/fd/base/: file_descriptor_base.hpp  file_descriptor_flags.hpp  file_descriptor_modes.hpp
include/fd/sync/: file_descriptor.hpp
src/: fd.cpp  file_descriptor.cpp  file_descriptor_base.cpp
src/base/: file_descriptor_base.cpp
tests/: CMakeLists.txt  fd_test.cpp  file_descriptor_async_test.cpp  file_descriptor_base_test.cpp  file_descriptor_sync_test.cpp
